k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ar-education
  labels:
    app.kubernetes.io/name: ar-education
